# Understanding-and-Explaining-Web-Fingerprinting-with-a-Protocol-Centric-Approach

./: .gitattributes  .gitignore  .isort.cfg  LICENSE  README.md
crawlers/: setup.cfg  setup.py
crawlers/docker/: Dockerfile_chrome  Dockerfile_firefox  build.sh  entry_point.sh  run_docker.sh  unbound_custom.conf
crawlers/docker/dns_cache/: refresh_unbound_cache.sh  tld.dump
crawlers/src/tls_crawler/: __init__.py  crawl.py  logger.py
crawlers/src/tls_crawler/processing/: __init__.py  flow.py  flow_session.py  process.py
crawlers/src/tls_crawler/processing/features/: app_layer.py  base.py  certificates.py  flow_bytes.py  packet_length.py  packet_time.py  response_time.py  time_series.py
crawlers/src/tls_crawler/processing/features/context/: packet_direction.py  packet_flow_key.py
crawlers/tests/: conftest.py  start_docker.sh  stop_docker.sh
crawlers/tests/crawlers/: test_selenium_chrome.py  test_selenium_firefox.py
crawlers/tests/processing/: debug.logs  test_processing.py
experiments/common/: cleanup_docker.sh  crawl.sh  crawl_parallel.sh  process_parallel.sh  run_docker.sh
experiments/domains_experiments/crawler/: README.md  crawl.py  merge_csv.py  process.py  run_docker.sh
experiments/domains_experiments/scripts/: README.md  evaluate_datasets_by_label_count.py  evaluate_datasets_by_timepoint.py  evaluate_datasets_with_padding.py
experiments/domains_experiments/scripts/data/: tranco_temporal_per_flow_cache_no_blacklists_static_DE.csv  tranco_temporal_per_flow_cache_no_blacklists_ts_DE.pkl  tranco_temporal_per_flow_no_cache_no_blacklists_static_DE.csv  tranco_temporal_per_flow_no_cache_no_blacklists_ts_DE.pkl
experiments/page_9gag_experiments/crawler/: 9gag.csv  crawl.py  crawl.sh  crawl_parallel.sh  merge_csv.py  process.py
experiments/page_9gag_experiments/scripts/: README.md  evaluate_datasets_by_timepoint.py  evaluate_datasets_flows_zoom.py  evaluate_datasets_isolated_by_label_count.py  evaluate_datasets_with_padding.py
experiments/page_imdb_experiments/crawler/: crawl.py  imdb_25k.csv  merge_csv.py  process.py  process_parallel.sh  user_agents.txt
experiments/page_imdb_experiments/scripts/: evaluate_datasets_by_timepoint.py  evaluate_datasets_flows_zoom.py  evaluate_datasets_isolated_by_label_count.py  evaluate_datasets_with_padding.py
experiments/page_wiki_experiments/crawler/: README.md  crawl.py  generate_wiki_dataset.py  merge_csv.py  process.py  user_agents.txt
experiments/page_wiki_experiments/scripts/: evaluate_datasets_by_label_count.py  evaluate_datasets_by_timepoint.py  evaluate_datasets_with_padding.py
experiments/page_wiki_experiments/scripts/data/: uaug_temporal_per_flow_no_cache_no_blacklists_static_DE.csv  uaug_temporal_per_flow_no_cache_no_blacklists_ts_DE.pkl
models/: .isort.cfg  dbg.py  setup.cfg
models/src/tls_fingerprinting/: __init__.py  logger.py
models/src/tls_fingerprinting/models/base/nn/: convnet.py  gan.py  mlp.py  samplers.py  stacked_vae.py  stacked_vae_mlp.py  transformer.py  ts_model.py  ts_vae.py  vae.py  vae_mlp.py
models/src/tls_fingerprinting/models/base/static/: catboost.py  gmm.py  knn.py  lr.py  random_forest.py  xgb.py
models/src/tls_fingerprinting/utils/: evaluation.py  samplers.py
models/tests/models/base/nn/: test_convnet.py  test_gan.py  test_mlp.py  test_stacked_vae.py  test_stacked_vae_mlp.py  test_ts_model.py  test_ts_vae.py  test_vae.py  test_vae_mlp.py
models/tests/models/base/static/: test_catboost.py  test_gmm.py  test_knn.py  test_lr.py  test_random_forest.py  test_xgb.py
